# intex_2

./: .gitignore  FEATURES.md  FRONTEND_PLAN.md  Makefile  README.md  RULES.md  SEED-DATA.md  SETUP.md  plan-dashboard-technical-implementation.md  plan-minimum-checklist.md  plan.md  pyproject.toml  schema.sql
.github/workflows/: ml-nightly-retrain.yml
app-integration/: integration_notes.md
app-integration/api/: resident_risk_endpoint_example.py
backend/docs/: api-architecture.md  api-endpoint-checklist.md  api-endpoint-test-results.csv  auth-and-security.md  authorization-endpoint-matrix.md  backend-overview.md  database-access-patterns.md  dto-and-model-structure.md  error-handling-and-validation.md  identity-and-seed.md  identity-ddl-supabase.sql  identity-seed.sql  ml-refresh-ddl-supabase.sql  security-regression-checklist.md  service-layer-design.md
backend/intex/: intex.sln  package-lock.json
docs/: Project-Charter.md  phase-0-inventory.md  phase-1-eda.md
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/public/: staticwebapp.config.json
frontend/src/: App.tsx  index.css  (+2 more)
intex_ml_pipelines.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ml-pipelines/: 00_pipeline_index.ipynb  01_global_data_profiling.ipynb
scripts/: run_phase0_inventory.py  run_phase1_eda.py  train_one.py
tests/: test_data_cleaning.py  test_data_inventory.py  test_data_profiling.py  test_feature_builders.py  test_train_scripts.py
update ui:ux/: DESIGN.md  becon_design_specification_style_guide.html
(+240 files in other folders)
