[project]
name = "intex-ml-pipelines"
version = "0.1.0"
description = "ML pipeline scaffolding for donor, resident, and safehouse analytics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "matplotlib>=3.8",
  "scikit-learn>=1.5",
  "pyyaml>=6.0",
  "joblib>=1.4",
  "jupyter>=1.0",
  "psycopg[binary]>=3.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
